refaktoring i implementacja custom convertera